<resources>
    <string name="app_name">NovaX</string>
    <string name="title_activity_menu">Home</string>
    <string name="title_activity_watchlistsearch">Search</string>
    <string name="title_activity_watchlist">Watchlist</string>
    <string name="title_activity_balance">Balance</string>
    <string name="title_activity_contactus">Contact Us</string>
    <string name="title_activity_deposite_rules">How do I make a deposite?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Juyel Rana</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="US_NVIDIA">US:NVIDIA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance">Balance</string>
    <string name="watchlist">Watchlist</string>
    <string name="contact_us">Contact Us</string>
    <string name="profitloss"><![CDATA[Profit & Loss]]></string>
    <string name="home">Home</string>
    <string name="portfolio">Portfolio</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="social_traders">Social Traders</string>

    <array name="list_user">
        <item>WONG MAY FUNG 29287120891</item>
        <item>Islamic Bank</item>
        <item>Dutch Bangla Bank</item>
    </array>
</resources>
